@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.slytechs.jnet</groupId>
 	<artifactId>jnetpcap-pro</artifactId>
 	<!-- mvn versions:set -DnewVersion=_new_version_ -->
-	<version>0.9-SNAPSHOT</version>
+	<version>0.9</version>
 	<name>jNetPcap</name>
 	<description>A protocol enabled jNetPcap with IP Fragment reassembly.</description>
 	<url>https://www.slytechs.com</url>
@@ -34,24 +36,37 @@
 		</developer>
 	</developers>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.10.1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite-api -->
+		<!--
+		https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite-api -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-suite-api</artifactId>
 			<version>1.9.1</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.9.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.slytechs.jnet</groupId>
+			<artifactId>jnetpcap</artifactId>
+			<version>2.0.0-alpha.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.slytechs.jnet</groupId>
+			<artifactId>core-protocols</artifactId>
+			<version>0.9</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -70,122 +85,50 @@
 				<version>1.7.0</version>
 			</extension>
 		</extensions>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-					<release>${jdk.version}</release>
-					<enablePreview>true</enablePreview>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.7.1</version>
-			</plugin>
-			<!-- Unit test the API -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M7</version>
-				<configuration>
-					<trimStackTrace>true</trimStackTrace>
-					<encoding>${java.encoding}</encoding>
-					<skipAfterFailureCount>1</skipAfterFailureCount>
-					<reuseForks>true</reuseForks>
-					<groups>${groups}</groups>
-					<excludedGroups>${excludeGroups}</excludedGroups>
-					<argLine>
-						${java.library.path.libpcap} ${java.preview} ${java.native}
-					</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.4.1 </version>
-				<configuration>
-					<doctitle>Public API for ${project.name} ${project.version}</doctitle>
-					<windowtitle>Public API for ${project.name} ${project.version}</windowtitle>
-					<encoding>${java.encoding}</encoding>
-					<source>${jdk.version}</source>
-					<overview>${basedir}/Overview.html</overview>
-					<additionalOptions>
-								${java.preview}
-					</additionalOptions>
-					<show>public</show>
-          			<excludePackageNames>*.internal</excludePackageNames>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-scm-publish-plugin</artifactId>
-				<version>3.0.0</version>
-				<configuration>
-					<scmBranch>gh-pages</scmBranch>
-				</configuration>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.11.0</version>
+					<configuration>
+						<source>${jdk.version}</source>
+						<target>${jdk.version}</target>
+						<release>${jdk.version}</release>
+						<compilerArgs>
+							<arg>--enable-preview</arg>
+						</compilerArgs>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.5.0</version>
+					<configuration>
+						<sourcepath>${basedir}/src/main/java</sourcepath>
+						<show>public</show>
+						<additionalJOption>--enable-preview</additionalJOption>
+						<excludePackageNames>
+							*.internal:*.internal.*</excludePackageNames>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M7</version>
+					<configuration>
+						<skipTests>true</skipTests>
+						<trimStackTrace>true</trimStackTrace>
+						<encoding>${java.encoding}</encoding>
+						<skipAfterFailureCount>1</skipAfterFailureCount>
+						<reuseForks>true</reuseForks>
+						<groups>${groups}</groups>
+						<excludedGroups>${excludeGroups}</excludedGroups>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>3.0.0-M7</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.22.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.4.1</version>
-				<configuration>
-					<doctitle>Public API for ${project.name} ${project.version}</doctitle>
-					<windowtitle>Public API for ${project.name} ${project.version}</windowtitle>
-					<testDoctitle>Test API for ${project.name} ${project.version}</testDoctitle>
-					<testWindowtitle>Test API for ${project.name} ${project.version}</testWindowtitle>
-					<encoding>${java.encoding}</encoding>
-					<source>${jdk.version}</source>
-					<overview>${basedir}/Overview.html</overview>
-					<additionalOptions>
-								${java.preview}
-					</additionalOptions>
-          			<excludePackageNames>*.internal</excludePackageNames>
-				</configuration>
-				<reportSets>
-					<reportSet>
-						<id>aggregate-no-fork</id>
-						<configuration>
-							<goal>aggregate-no-fork</goal>
-							<show>public</show>
-							<skip>false</skip>
-						</configuration>
-						<reports>
-							<report>javadoc</report>
-						</reports>
-					</reportSet>
-					<reportSet>
-						<id>test-aggregate-no-fork</id>
-						<configuration>
-							<goal>test-aggregate-no-fork</goal>
-							<show>private</show>
-							<skip>true</skip>
-						</configuration>
-						<reports>
-							<report>test-javadoc</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-		</plugins>
-	</reporting>
 	<organization>
 		<name>Sly Technologies Inc</name>
 		<url>http://slytechs.com</url>
@@ -196,7 +139,8 @@
 	</issueManagement>
 	<scm>
 		<connection>scm:git:git://github.com/slytechs-repos/jnetpcap-pro.git</connection>
-		<developerConnection>scm:git:ssh:git://github.com/slytechs-repos/jnetpcap-pro.git</developerConnection>
+		<developerConnection>
+			scm:git:ssh:git://github.com/slytechs-repos/jnetpcap-pro.git</developerConnection>
 		<url>https://github.com/slytechs-repos/jnetpcap-pro</url>
 	</scm>
 	<distributionManagement>
